--- a/WishListProject/app/src/main/AndroidManifest.xml
+++ b/WishListProject/app/src/main/AndroidManifest.xml
@@ -9,8 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WishListProject">
+
+        <activity android:name="MainActivity2"
+            android:exported="true">
+
+        </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
