--- a/RecyclerView_TodoListIntent/app/src/main/AndroidManifest.xml
+++ b/RecyclerView_TodoListIntent/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecyclerView_TodoListIntent">
         <activity
+            android:name=".MainActivity2"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
