--- a/Navigation Drawer_Test/app/build.gradle
+++ b/Navigation Drawer_Test/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.MainActivity2.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -33,6 +33,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.MainActivity2.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.MainActivity2.espresso:espresso-core:3.4.0'
 }
