--- a/RecyclerView_TodoListIntent/app/src/main/AndroidManifest.xml
+++ b/RecyclerView_TodoListIntent/app/src/main/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RecyclerView_TodoListIntent">
-        <activity
-            android:name=".MainActivity2"
-            android:exported="true">
+        <activity android:name=".MainActivity2"
+                  android:exported="true">
 
-        </activity>
+            </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
