MVVM Example (번호 뽑기)

--- a/KotlinApp/Design Pattern/MVVM/MVVM_Example/app/src/main/AndroidManifest.xml
+++ b/KotlinApp/Design Pattern/MVVM/MVVM_Example/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.Activity">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,14 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVM_Example"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name="view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="view.SetMaxActivity"
+            android:exported="true" >
         </activity>
     </application>
 
