--- a/KotlinApp/Design Pattern/MVVM/MVVM_Example/app/build.gradle
+++ b/KotlinApp/Design Pattern/MVVM/MVVM_Example/app/build.gradle
@@ -29,9 +29,22 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
+
+    def lifecycle_version = "2.2.0"
+
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.activity:activity-ktx:1.4.0"
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
